# fanta

./: .clang-format  .gitignore  .tool-versions  CMakeLists.txt
src/: main.cpp
